force-app/main/default/objects/Section_locale__c/Section_locale__c.object-meta.xml
<CustomObject>
    <label>Section locale</label>
    <nameField>
        <label>Nom section</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Sections locales</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>