force-app/main/default/objects/Section_locale__c/fields/Adresse_N_nom_voie__c.field-meta.xml
<CustomField>
    <fullName>Adresse_N_nom_voie__c</fullName>
    <label>Adresse (N°, nom voie)</label>
    <length>200</length>
    <type>Text</type>
</CustomField>