force-app/main/default/objects/Section_locale__c/fields/Code_region__c.field-meta.xml
<CustomField>
    <fullName>Code_region__c</fullName>
    <formula>Region__r.Code_region__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Code région</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>