force-app/main/default/objects/Section_locale__c/fields/Code_section__c.field-meta.xml
<CustomField>
    <fullName>Code_section__c</fullName>
    <label>Code section</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>