force-app/main/default/objects/Section_locale__c/fields/Code_section_de_vote__c.field-meta.xml
<CustomField>
    <fullName>Code_section_de_vote__c</fullName>
    <formula>Nom_section_de_vote__r.Code_section__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Code section de vote</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>