force-app/main/default/objects/Section_locale__c/fields/Code_section_mere__c.field-meta.xml
<CustomField>
    <fullName>Code_section_mere__c</fullName>
    <formula>Nom_section_mere__r.Code_section__c</formula>
    <label>Code section mère</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>