force-app/main/default/objects/Section_locale__c/fields/Commentaire_Tel__c.field-meta.xml
<CustomField>
    <fullName>Commentaire_Tel__c</fullName>
    <label>Commentaire Tel</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>