force-app/main/default/objects/Section_locale__c/fields/Complement_adresse_1__c.field-meta.xml
<CustomField>
    <fullName>Complement_adresse_1__c</fullName>
    <label>Complément adresse 1</label>
    <length>80</length>
    <type>Text</type>
</CustomField>