force-app/main/default/objects/Section_locale__c/fields/Date_Effectif__c.field-meta.xml
<CustomField>
    <fullName>Date_Effectif__c</fullName>
    <label>Date Effectif</label>
    <type>DateTime</type>
</CustomField>