force-app/main/default/objects/Section_locale__c/fields/Ecole__c.field-meta.xml
<CustomField>
    <fullName>Ecole__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Ecole</label>
    <type>Checkbox</type>
</CustomField>