force-app/main/default/objects/Section_locale__c/fields/Effectif__c.field-meta.xml
<CustomField>
    <fullName>Effectif__c</fullName>
    <label>Effectif</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>