force-app/main/default/objects/Section_locale__c/fields/Employeur__c.field-meta.xml
<CustomField>
    <fullName>Employeur__c</fullName>
    <label>Employeur</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Ministère de l&apos;intérieur</fullName>
            </value>
            <value>
                <fullName>Mairie</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>