force-app/main/default/objects/Section_locale__c/fields/LieuDit__c.field-meta.xml
<CustomField>
    <fullName>LieuDit__c</fullName>
    <label>LieuDit</label>
    <length>80</length>
    <type>Text</type>
</CustomField>