force-app/main/default/objects/Section_locale__c/fields/Nom_section_de_vote__c.field-meta.xml
<CustomField>
    <fullName>Nom_section_de_vote__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Nom section de vote</label>
    <referenceTo>Section_de_vote__c</referenceTo>
    <relationshipName>Sections_locale</relationshipName>
    <type>Lookup</type>
</CustomField>