force-app/main/default/objects/Section_locale__c/fields/Nom_section_mere__c.field-meta.xml
<CustomField>
    <fullName>Nom_section_mere__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Nom section mère</label>
    <referenceTo>Section_locale__c</referenceTo>
    <relationshipName>Sections_locale2</relationshipName>
    <type>Lookup</type>
</CustomField>