force-app/main/default/objects/Section_locale__c/fields/Nombre_Magazine__c.field-meta.xml
<CustomField>
    <fullName>Nombre_Magazine__c</fullName>
    <label>Nombre Magazine</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>