force-app/main/default/objects/Section_locale__c/fields/Region__c.field-meta.xml
<CustomField>
    <fullName>Region__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Région</label>
    <referenceTo>Region__c</referenceTo>
    <relationshipName>Sections_locale</relationshipName>
    <type>Lookup</type>
</CustomField>