force-app/main/default/objects/Section_locale__c/fields/SGAMI__c.field-meta.xml
<CustomField>
    <fullName>SGAMI__c</fullName>
    <label>SGAMI</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>