force-app/main/default/objects/Section_locale__c/fields/SGAP__c.field-meta.xml
<CustomField>
    <fullName>SGAP__c</fullName>
    <label>SGAP</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>