force-app/main/default/objects/Section_locale__c/fields/Tel1__c.field-meta.xml
<CustomField>
    <fullName>Tel1__c</fullName>
    <label>Tel1</label>
    <type>Phone</type>
</CustomField>