force-app/main/default/objects/Section_locale__c/fields/Tel2__c.field-meta.xml
<CustomField>
    <fullName>Tel2__c</fullName>
    <label>Tel2</label>
    <type>Phone</type>
</CustomField>