force-app/main/default/objects/Section_locale__c/fields/Tel3__c.field-meta.xml
<CustomField>
    <fullName>Tel3__c</fullName>
    <label>Tel3</label>
    <type>Phone</type>
</CustomField>