force-app/main/default/objects/Section_locale__c/fields/Validation_CA__c.field-meta.xml
<CustomField>
    <fullName>Validation_CA__c</fullName>
    <description>Champ représentant si la section locale est validée ou toujours en cours de prospection</description>
    <label>Validation CA</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Oui</fullName>
            </value>
            <value>
                <fullName>Non</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>