force-app/main/default/objects/Section_locale__c/fields/Ville__c.field-meta.xml
<CustomField>
    <fullName>Ville__c</fullName>
    <label>Ville</label>
    <length>80</length>
    <type>Text</type>
</CustomField>